[gd_scene load_steps=15 format=3 uid="uid://bon7d3kkl252q"]

[ext_resource type="Texture2D" uid="uid://6xyc2g86f1rj" path="res://Assets/Characters/character_0015.png" id="1_5ogkj"]
[ext_resource type="Script" path="res://Characteres/Enemies/ground_enemy.gd" id="1_y5i00"]
[ext_resource type="Shader" uid="uid://cv2negvsc4ixy" path="res://shaders/hit_flash.tres" id="2_eu6je"]
[ext_resource type="Texture2D" uid="uid://01acu0mdfw2b" path="res://Assets/Characters/character_0016.png" id="3_23uu6"]
[ext_resource type="Texture2D" uid="uid://bkwjjwwsd068y" path="res://Assets/Characters/character_0017.png" id="4_mre6r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0k0vj"]
shader = ExtResource("2_eu6je")
shader_parameter/Eneabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_xmevq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5ogkj")
}, {
"duration": 1.0,
"texture": ExtResource("3_23uu6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_mre6r")
}],
"loop": true,
"name": &"spanw",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24q0i"]
size = Vector2(11, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ege12"]
size = Vector2(15, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2xi4"]
size = Vector2(5, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kw0n0"]
size = Vector2(9, 12)

[sub_resource type="Animation" id="Animation_3qmhy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HazardArea2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HazardArea2D/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxArea2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xo1kf"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"spanw", &"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HazardArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HazardArea2D/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtboxArea2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_es3dg"]
_data = {
"RESET": SubResource("Animation_3qmhy"),
"spawn": SubResource("Animation_xo1kf")
}

[node name="GroundEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_y5i00")
start_direction = 1
max_speed = 30

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
material = SubResource("ShaderMaterial_0k0vj")
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xmevq")
animation = &"spanw"
autoplay = "spanw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_24q0i")

[node name="FallDetectorRayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2(10, -5)
target_position = Vector2(0, 30)

[node name="HazardArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea2D"]
position = Vector2(-0.5, -5)
shape = SubResource("RectangleShape2D_ege12")
debug_color = Color(0.843137, 0.313726, 0.556863, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HazardArea2D"]
position = Vector2(-0.5, -13)
shape = SubResource("RectangleShape2D_y2xi4")
debug_color = Color(0.843137, 0.313726, 0.556863, 0.419608)

[node name="HurtboxArea2D" type="Area2D" parent="."]
editor_description = "Area donde puede recibir damage"
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxArea2D"]
position = Vector2(-0.5, -6)
shape = SubResource("RectangleShape2D_kw0n0")
debug_color = Color(0.705882, 0.486275, 0.12549, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_es3dg")
}

[connection signal="area_entered" from="HurtboxArea2D" to="." method="_on_hurtbox_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
